Fixed failing welcome page test

--- a/views/log_in.erb
+++ b/views/log_in.erb
@@ -1,20 +1,6 @@
-
-<html>
-<head>
-</head>
-
-<body>
-  <h1>Welcome to Chitter...</h1>
-
-
-
-
-
-<form action="/home" method="get">
+<form action="/welcome" method="get">
   Peep: <input type="text" name="username" />
   <input type="text" name="password" />
   <br />
   <input type="submit" value="Submit" />
 </form>
-</body>
-</html>
