Fixed route issue

--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -7,8 +7,8 @@
   <body>
 
 <h1>Welcome to Chitter...</h1>
-<form action="/welcome" method="get">
-  <input type="text" name="username" />
+<form action="/sign_up" method="post">
+  Peep: <input type="text" name="username" />
   <input type="text" name="password" />
   <br />
   <input type="submit" value="Submit" />
