--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,5 +1,7 @@
 <h1> Welcome to Chitter... </h1>
 
-<form action="/home" method="get">
-      <input type="submit" value="Home" />
-      </form>
+<form action="/new_peep" method="post">
+  text: <input type="text" name="text" />
+  <br />
+  <input type="submit" value="Submit" />
+</form>
